--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="index.css">
 </head>
-<body> 
+<body>
     <div id="root">
 
     </div>
-<script type="module" src="index.js"></script>
+<script type="module" src="src/App.jsx"></script>
 </body>
 </html>
