view more added for restaurants

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div>
+        not rendered
+    </div>
     <div id="root">
 
     </div>
