--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div>
+    <!-- <div>
         not rendered
-    </div>
+    </div> -->
     <div id="root">
 
     </div>
