--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <div>
         not rendered
     </div> -->
-    <div id="root">
+    <div id="root" class="font-sans">
 
     </div>
 <script type="module" src="src/App.jsx"></script>
